tests/NormalTests/paczka1/fuzzy1/56160010.err
Error in line 15: Hr93Tz A190 59,9
Error in line 22: 8X0 S955 64,62
Error in line 14: lN3d3 S623 148,1
Error in line 24: 8X0 S623 77,6
Error in line 27: 8X0 S955 47,8
Error in line 26: lN3d3 S955 24,1
Error in line 28: KyNwz1yN S623 19,2
